DMs: Fix scrollbar gutter

--- a/packages/web/src/pages/chat-page/ChatPage.module.css
+++ b/packages/web/src/pages/chat-page/ChatPage.module.css
@@ -40,6 +40,11 @@
   flex-direction: column;
 }
 
+.scrollGutterContainer {
+  flex: 1;
+  overflow-y: scroll;
+}
+
 @media (max-width: 1080px) {
   .chatList {
     width: 96px;
