--- a/packages/web/src/pages/chat-page/components/ChatHeader.module.css
+++ b/packages/web/src/pages/chat-page/components/ChatHeader.module.css
@@ -1,7 +1,6 @@
 .root {
   display: flex;
   height: 112px;
-  margin-left: -15px;
 }
 
 .left {
